Added dataset story and structure.

--- a/VeriBilimineGirisProje.ipynb
+++ b/VeriBilimineGirisProje.ipynb
@@ -1,12 +1,439 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9a6ec54a-64bd-4235-a8e2-3810c10c5d7f",
+   "metadata": {},
+   "source": [
+    "## Part-1: Keşifçi Veri Analizi ve Veri Görselleştirme"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "00e9e7b3-2266-443f-9e93-7897c86a1eaf",
+   "execution_count": 2,
+   "id": "8920d7b5-5be4-4aaf-9130-5adbceca6598",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Veri setini yükleme\n",
+    "df = pd.read_csv('StudentPerformanceFactors.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f2122f2-64a6-43e2-bcac-e17deb01d1a3",
+   "metadata": {},
+   "source": [
+    "### Veri Seti Hikayesi\n",
+    "\n",
+    "Bu veri seti, sınavlardaki öğrenci performansını etkileyen çeşitli faktörlerin kapsamlı bir özetini sunmaktadır. Ders çalışma alışkanlıkları, devam durumu, ebeveyn katılımı ve akademik başarıyı etkileyen diğer etmenlerle ilgili bilgileri içermektedir.\n",
+    "\n",
+    "### Veri Seti Özellikler\n",
+    "\n",
+    "- **Hours_Studied**: Haftada ders çalışmaya harcanan saat sayısı.\n",
+    "- **Attendance**: Derslere katılım yüzdesi.\n",
+    "- **Parental_Involvement**: Öğrencinin eğitimine ebeveyn katılım seviyesi (Düşük, Orta, Yüksek).\n",
+    "- **Access_to_Resources**: Eğitim kaynaklarına erişim durumu (Düşük, Orta, Yüksek).\n",
+    "- **Extracurricular_Activities**: Ders dışı etkinliklere katılım (Evet, Hayır).\n",
+    "- **Sleep_Hours**: Her gece ortalama uyku saati.\n",
+    "- **Previous_Scores**: Önceki sınavlardan alınan puanlar.\n",
+    "- **Motivation_Level**: Öğrencinin motivasyon seviyesi (Düşük, Orta, Yüksek).\n",
+    "- **Internet_Access**: İnternet erişimi durumu (Evet, Hayır).\n",
+    "- **Tutoring_Sessions**: Aylık alınan özel ders sayısı.\n",
+    "- **Family_Income**: Aile gelir seviyesi (Düşük, Orta, Yüksek).\n",
+    "- **Teacher_Quality**: Öğretmenlerin kalitesi (Düşük, Orta, Yüksek).\n",
+    "- **School_Type**: Katılınan okul türü (Devlet, Özel).\n",
+    "- **Peer_Influence**: Arkadaşların akademik performansa etkisi (Pozitif, Nötr, Negatif).\n",
+    "- **Physical_Activity**: Haftada yapılan ortalama fiziksel aktivite saati.\n",
+    "- **Learning_Disabilities**: Öğrenme güçlüğü olup olmadığı (Evet, Hayır).\n",
+    "- **Parental_Education_Level**: Ebeveynlerin en yüksek eğitim seviyesi (Lise, Üniversite, Lisansüstü).\n",
+    "- **Distance_from_Home**: Evden okula olan mesafe (Yakın, Orta, Uzak).\n",
+    "- **Gender**: Öğrencinin cinsiyeti (Erkrek, Kadın).\n",
+    "- **Exam_Scoe**: Final sınavı puanı.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c71fc28c-404c-4e84-9f39-0fc189d4ffc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Satır sayısı (Gözlem Sayısı) : 6607\n",
+      "Sütun sayısı (Değişken Sayısı) : 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Satır ve sütun sayısını öğrenmek için\n",
+    "print(\"Satır sayısı (Gözlem Sayısı) :\", df.shape[0])\n",
+    "print(\"Sütun sayısı (Değişken Sayısı) :\", df.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9b07ef8e-90f0-458b-812f-bf8e6431167d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6607 entries, 0 to 6606\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                      Non-Null Count  Dtype \n",
+      "---  ------                      --------------  ----- \n",
+      " 0   Hours_Studied               6607 non-null   int64 \n",
+      " 1   Attendance                  6607 non-null   int64 \n",
+      " 2   Parental_Involvement        6607 non-null   object\n",
+      " 3   Access_to_Resources         6607 non-null   object\n",
+      " 4   Extracurricular_Activities  6607 non-null   object\n",
+      " 5   Sleep_Hours                 6607 non-null   int64 \n",
+      " 6   Previous_Scores             6607 non-null   int64 \n",
+      " 7   Motivation_Level            6607 non-null   object\n",
+      " 8   Internet_Access             6607 non-null   object\n",
+      " 9   Tutoring_Sessions           6607 non-null   int64 \n",
+      " 10  Family_Income               6607 non-null   object\n",
+      " 11  Teacher_Quality             6529 non-null   object\n",
+      " 12  School_Type                 6607 non-null   object\n",
+      " 13  Peer_Influence              6607 non-null   object\n",
+      " 14  Physical_Activity           6607 non-null   int64 \n",
+      " 15  Learning_Disabilities       6607 non-null   object\n",
+      " 16  Parental_Education_Level    6517 non-null   object\n",
+      " 17  Distance_from_Home          6540 non-null   object\n",
+      " 18  Gender                      6607 non-null   object\n",
+      " 19  Exam_Score                  6607 non-null   int64 \n",
+      "dtypes: int64(7), object(13)\n",
+      "memory usage: 1.0+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Genel bilgi için\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5de820a1-95f2-4b45-ba5a-e8192876f2e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hours_Studied</th>\n",
+       "      <th>Attendance</th>\n",
+       "      <th>Sleep_Hours</th>\n",
+       "      <th>Previous_Scores</th>\n",
+       "      <th>Tutoring_Sessions</th>\n",
+       "      <th>Physical_Activity</th>\n",
+       "      <th>Exam_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6607.000000</td>\n",
+       "      <td>6607.000000</td>\n",
+       "      <td>6607.00000</td>\n",
+       "      <td>6607.000000</td>\n",
+       "      <td>6607.000000</td>\n",
+       "      <td>6607.000000</td>\n",
+       "      <td>6607.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>19.975329</td>\n",
+       "      <td>79.977448</td>\n",
+       "      <td>7.02906</td>\n",
+       "      <td>75.070531</td>\n",
+       "      <td>1.493719</td>\n",
+       "      <td>2.967610</td>\n",
+       "      <td>67.235659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.990594</td>\n",
+       "      <td>11.547475</td>\n",
+       "      <td>1.46812</td>\n",
+       "      <td>14.399784</td>\n",
+       "      <td>1.230570</td>\n",
+       "      <td>1.031231</td>\n",
+       "      <td>3.890456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>6.00000</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>7.00000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>67.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>8.00000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>10.00000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>101.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Hours_Studied   Attendance  Sleep_Hours  Previous_Scores  \\\n",
+       "count    6607.000000  6607.000000   6607.00000      6607.000000   \n",
+       "mean       19.975329    79.977448      7.02906        75.070531   \n",
+       "std         5.990594    11.547475      1.46812        14.399784   \n",
+       "min         1.000000    60.000000      4.00000        50.000000   \n",
+       "25%        16.000000    70.000000      6.00000        63.000000   \n",
+       "50%        20.000000    80.000000      7.00000        75.000000   \n",
+       "75%        24.000000    90.000000      8.00000        88.000000   \n",
+       "max        44.000000   100.000000     10.00000       100.000000   \n",
+       "\n",
+       "       Tutoring_Sessions  Physical_Activity   Exam_Score  \n",
+       "count        6607.000000        6607.000000  6607.000000  \n",
+       "mean            1.493719           2.967610    67.235659  \n",
+       "std             1.230570           1.031231     3.890456  \n",
+       "min             0.000000           0.000000    55.000000  \n",
+       "25%             1.000000           2.000000    65.000000  \n",
+       "50%             1.000000           3.000000    67.000000  \n",
+       "75%             2.000000           4.000000    69.000000  \n",
+       "max             8.000000           6.000000   101.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Betimsel istatistikler\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9fcdcce3-49b5-49fd-aef9-da8644edc47b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parental_Involvement sınıf sayıları ve frekansları:\n",
+      "Parental_Involvement\n",
+      "Medium    3362\n",
+      "High      1908\n",
+      "Low       1337\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Access_to_Resources sınıf sayıları ve frekansları:\n",
+      "Access_to_Resources\n",
+      "Medium    3319\n",
+      "High      1975\n",
+      "Low       1313\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Extracurricular_Activities sınıf sayıları ve frekansları:\n",
+      "Extracurricular_Activities\n",
+      "Yes    3938\n",
+      "No     2669\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Motivation_Level sınıf sayıları ve frekansları:\n",
+      "Motivation_Level\n",
+      "Medium    3351\n",
+      "Low       1937\n",
+      "High      1319\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Internet_Access sınıf sayıları ve frekansları:\n",
+      "Internet_Access\n",
+      "Yes    6108\n",
+      "No      499\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Family_Income sınıf sayıları ve frekansları:\n",
+      "Family_Income\n",
+      "Low       2672\n",
+      "Medium    2666\n",
+      "High      1269\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Teacher_Quality sınıf sayıları ve frekansları:\n",
+      "Teacher_Quality\n",
+      "Medium    3925\n",
+      "High      1947\n",
+      "Low        657\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "School_Type sınıf sayıları ve frekansları:\n",
+      "School_Type\n",
+      "Public     4598\n",
+      "Private    2009\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Peer_Influence sınıf sayıları ve frekansları:\n",
+      "Peer_Influence\n",
+      "Positive    2638\n",
+      "Neutral     2592\n",
+      "Negative    1377\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Learning_Disabilities sınıf sayıları ve frekansları:\n",
+      "Learning_Disabilities\n",
+      "No     5912\n",
+      "Yes     695\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Parental_Education_Level sınıf sayıları ve frekansları:\n",
+      "Parental_Education_Level\n",
+      "High School     3223\n",
+      "College         1989\n",
+      "Postgraduate    1305\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Distance_from_Home sınıf sayıları ve frekansları:\n",
+      "Distance_from_Home\n",
+      "Near        3884\n",
+      "Moderate    1998\n",
+      "Far          658\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Gender sınıf sayıları ve frekansları:\n",
+      "Gender\n",
+      "Male      3814\n",
+      "Female    2793\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kategorik değişkenlerin her bir sınıfının frekansı\n",
+    "for col in df.select_dtypes(include=['object']).columns:\n",
+    "    print(f\"{col} sınıf sayıları ve frekansları:\")\n",
+    "    print(df[col].value_counts())\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d5222810-2c16-44c9-95c6-54fca079dc5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eksik veri sayıları:\n",
+      "Hours_Studied                  0\n",
+      "Attendance                     0\n",
+      "Parental_Involvement           0\n",
+      "Access_to_Resources            0\n",
+      "Extracurricular_Activities     0\n",
+      "Sleep_Hours                    0\n",
+      "Previous_Scores                0\n",
+      "Motivation_Level               0\n",
+      "Internet_Access                0\n",
+      "Tutoring_Sessions              0\n",
+      "Family_Income                  0\n",
+      "Teacher_Quality               78\n",
+      "School_Type                    0\n",
+      "Peer_Influence                 0\n",
+      "Physical_Activity              0\n",
+      "Learning_Disabilities          0\n",
+      "Parental_Education_Level      90\n",
+      "Distance_from_Home            67\n",
+      "Gender                         0\n",
+      "Exam_Score                     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Eksik veri sayısı\n",
+    "print(\"Eksik veri sayıları:\")\n",
+    "print(df.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
