--- a/VeriBilimineGirisProje.ipynb
+++ b/VeriBilimineGirisProje.ipynb
@@ -1479,7 +1479,98 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c4b8f7-d219-471b-b036-51c27910a98f",
+   "id": "8277eca1-74d7-4a6e-9b8b-76d6a95475c3",
+   "metadata": {},
+   "source": [
+    "### 0-1 Normalizasyonu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "720be54c-f115-4c8f-accd-5d82628b3dfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Hours_Studied  Attendance  Sleep_Hours  Previous_Scores  Tutoring_Sessions  \\\n",
+      "0        0.59375       0.600     0.500000             0.46           0.000000   \n",
+      "1        0.46875       0.100     0.666667             0.18           0.666667   \n",
+      "2        0.62500       0.950     0.500000             0.82           0.666667   \n",
+      "3        0.78125       0.725     0.666667             0.96           0.333333   \n",
+      "4        0.46875       0.800     0.333333             0.30           1.000000   \n",
+      "\n",
+      "   Physical_Activity Parental_Involvement Access_to_Resources  \\\n",
+      "0           0.500000                  Low                High   \n",
+      "1           0.666667                  Low              Medium   \n",
+      "2           0.666667               Medium              Medium   \n",
+      "3           0.666667                  Low              Medium   \n",
+      "4           0.666667               Medium              Medium   \n",
+      "\n",
+      "  Extracurricular_Activities Motivation_Level Internet_Access Family_Income  \\\n",
+      "0                         No              Low             Yes           Low   \n",
+      "1                         No              Low             Yes        Medium   \n",
+      "2                        Yes           Medium             Yes        Medium   \n",
+      "3                        Yes           Medium             Yes        Medium   \n",
+      "4                        Yes           Medium             Yes        Medium   \n",
+      "\n",
+      "  Teacher_Quality School_Type Peer_Influence Learning_Disabilities  \\\n",
+      "0          Medium      Public       Positive                    No   \n",
+      "1          Medium      Public       Negative                    No   \n",
+      "2          Medium      Public        Neutral                    No   \n",
+      "3          Medium      Public       Negative                    No   \n",
+      "4            High      Public        Neutral                    No   \n",
+      "\n",
+      "  Parental_Education_Level Distance_from_Home  Gender  Exam_Score  \n",
+      "0              High School               Near    Male          67  \n",
+      "1                  College           Moderate  Female          61  \n",
+      "2             Postgraduate               Near    Male          74  \n",
+      "3              High School           Moderate    Male          71  \n",
+      "4                  College               Near  Female          70  \n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "df = pd.read_csv('StudentPerformanceFactors_cleaned_filled.csv')\n",
+    "\n",
+    "# Kategorik ve sayısal sütunları ayırma\n",
+    "categorical_columns = df.select_dtypes(exclude=['float64', 'int64']).columns\n",
+    "numerical_columns = df.select_dtypes(include=['float64', 'int64']).columns\n",
+    "\n",
+    "# Hedef değişkenin adı\n",
+    "target_variable = 'Exam_Score'\n",
+    "\n",
+    "# Hedef değişkeni sayısal sütunlardan çıkar\n",
+    "numerical_columns = numerical_columns[numerical_columns != target_variable]\n",
+    "\n",
+    "# Bağımsız değişkenleri (X) seçme\n",
+    "X = df[numerical_columns]\n",
+    "\n",
+    "# Normalizasyon: sadece bağımsız değişkenlere uygulama\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Normalizasyon sonrası veri çerçevesine dönüştürme\n",
+    "X_scaled_df = pd.DataFrame(X_scaled, columns=numerical_columns)\n",
+    "\n",
+    "# Hedef değişkeni (y) ve kategorik sütunları ayarlama\n",
+    "y = df[target_variable]\n",
+    "\n",
+    "# Kategorik sütunları ve hedef değişkeni ekleyerek nihai veri çerçevesini oluşturma\n",
+    "df_final = pd.concat([X_scaled_df, df[categorical_columns], df[target_variable]], axis=1)\n",
+    "\n",
+    "print(df_final.head())\n",
+    "\n",
+    "df_final.to_csv('StudentPerformanceFactors_normalization.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40d78026-1b7c-40bd-8c50-302e639b7b84",
    "metadata": {},
    "source": [
     "### Değişken Dönüşümleri"
@@ -1487,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "98397fd4-8c54-45a7-87e1-fd340c257df3",
    "metadata": {},
    "outputs": [
@@ -1497,18 +1588,18 @@
      "text": [
       "Dönüştürülmüş Veri Seti (ilk 5 satır):\n",
       "   Hours_Studied  Attendance  Sleep_Hours  Previous_Scores  Tutoring_Sessions  \\\n",
-      "0             23          84            7               73                  0   \n",
-      "1             19          64            8               59                  2   \n",
-      "2             24          98            7               91                  2   \n",
-      "3             29          89            8               98                  1   \n",
-      "4             19          92            6               65                  3   \n",
+      "0        0.59375       0.600     0.500000             0.46           0.000000   \n",
+      "1        0.46875       0.100     0.666667             0.18           0.666667   \n",
+      "2        0.62500       0.950     0.500000             0.82           0.666667   \n",
+      "3        0.78125       0.725     0.666667             0.96           0.333333   \n",
+      "4        0.46875       0.800     0.333333             0.30           1.000000   \n",
       "\n",
       "   Physical_Activity  Exam_Score  Parental_Involvement_Low  \\\n",
-      "0                  3          67                         1   \n",
-      "1                  4          61                         1   \n",
-      "2                  4          74                         0   \n",
-      "3                  4          71                         1   \n",
-      "4                  4          70                         0   \n",
+      "0           0.500000          67                         1   \n",
+      "1           0.666667          61                         1   \n",
+      "2           0.666667          74                         0   \n",
+      "3           0.666667          71                         1   \n",
+      "4           0.666667          70                         0   \n",
       "\n",
       "   Parental_Involvement_Medium  Access_to_Resources_Low  \\\n",
       "0                            0                        0   \n",
@@ -1579,38 +1670,37 @@
     "# Pandas'ın tüm sütunları göstermesi için ayar\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
-    "df_cleaned = pd.read_csv('StudentPerformanceFactors_cleaned_filled.csv')\n",
+    "df = pd.read_csv('StudentPerformanceFactors_normalization.csv')\n",
     "\n",
-    "# Hedef değişken ismini doğru olarak belirleyin\n",
     "target_column = 'Exam_Score'\n",
     "\n",
     "# Hedef değişken kategorikse sayısal sınıflara dönüştür (Label Encoding)\n",
-    "if df_cleaned[target_column].dtype == 'object':\n",
+    "if df[target_column].dtype == 'object':\n",
     "    label_encoder = LabelEncoder()\n",
-    "    df_cleaned[target_column] = label_encoder.fit_transform(df_cleaned[target_column])\n",
+    "    df[target_column] = label_encoder.fit_transform(df[target_column])\n",
     "\n",
     "# Kategorik değişkenler için One-Hot Encoding\n",
-    "categorical_columns = df_cleaned.select_dtypes(include=['object']).columns\n",
+    "categorical_columns = df.select_dtypes(include=['object']).columns\n",
     "\n",
     "# Hedef değişkeni çıkartıyoruz çünkü ona one-hot encoding uygulamıyoruz\n",
     "categorical_columns = categorical_columns[categorical_columns != target_column]\n",
     "\n",
     "# One-hot encoding uygulama (dummy tuzağını engellemek için drop_first=True kullanılır)\n",
-    "df_cleaned = pd.get_dummies(df_cleaned, columns=categorical_columns, drop_first=True)\n",
+    "df = pd.get_dummies(df, columns=categorical_columns, drop_first=True)\n",
     "\n",
     "# Boolean değerlerin 0 ve 1'e dönüştürülmesi (True/False -> 0/1)\n",
-    "df_cleaned = df_cleaned.apply(lambda x: x.map({True: 1, False: 0}) if x.dtype == 'bool' else x)\n",
+    "df = df.apply(lambda x: x.map({True: 1, False: 0}) if x.dtype == 'bool' else x)\n",
     "\n",
-    "df_cleaned.to_csv('StudentPerformanceFactors_transformed.csv', index=False)\n",
+    "df.to_csv('StudentPerformanceFactors_transformed.csv', index=False)\n",
     "\n",
     "print(\"Dönüştürülmüş Veri Seti (ilk 5 satır):\")\n",
-    "print(df_cleaned.head())"
+    "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d8e0819-0be3-4936-9f68-9bcb66f32572",
+   "id": "4379ee0d-abd8-4d0d-8ff9-69837b4568ff",
    "metadata": {},
    "outputs": [],
    "source": []
