Dataset trained with 4 regression models and the best performing model was found.

--- a/VeriBilimineGirisProje.ipynb
+++ b/VeriBilimineGirisProje.ipynb
@@ -1698,9 +1698,391 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ff07245-b1ac-4c9d-ad0b-0347668096d5",
+   "metadata": {},
+   "source": [
+    "## Part-3: Regresyon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf53c40-93dc-4fb1-929c-fba5da5238f9",
+   "metadata": {},
+   "source": [
+    "## Model Eğitimi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6a7e367f-b11f-43a2-a88a-48776477d295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Veri setini yükleme\n",
+    "df = pd.read_csv('StudentPerformanceFactors_transformed.csv')\n",
+    "\n",
+    "# Bağımsız ve bağımlı değişkenleri ayırma\n",
+    "X = df.drop(columns=['Exam_Score'])\n",
+    "y = df['Exam_Score']\n",
+    "\n",
+    "# Eğitim ve test setlerini ayırma\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Sonuçları saklamak için boş bir liste\n",
+    "results = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "957e5843-12af-4cef-b2e6-7819d7b6395f",
+   "metadata": {},
+   "source": [
+    "### 1. Doğrusal Regresyon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "98b455f1-44cd-4215-a6a0-e43509010bd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Doğrusal Regresyon:\n",
+      "  En İyi Parametreler: Default\n",
+      "  RMSE: 1.8152579183012338\n",
+      "  R²: 0.7668804800091011\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LinearRegression() # Linear Regression modelini tanımlıyoruz\n",
+    "\n",
+    "# Modeli eğitim verisiyle eğitiyoruz\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "# Test verisiyle tahmin yapıyoruz\n",
+    "y_pred_lr = lr.predict(X_test)\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki RMSE (Root Mean Squared Error) hesaplanıyor\n",
+    "rmse_lr = np.sqrt(mean_squared_error(y_test, y_pred_lr))\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki R² (R-squared) skorunu hesaplıyoruz\n",
+    "r2_lr = r2_score(y_test, y_pred_lr)\n",
+    "\n",
+    "# Sonuçları 'results' listesine ekliyoruz\n",
+    "results.append({\"Model\": \"Doğrusal Regresyon\", \"En İyi Parametreler\": \"Default\", \"RMSE\": rmse_lr, \"R²\": r2_lr})\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"\\nDoğrusal Regresyon:\")\n",
+    "print(f\"  En İyi Parametreler: Default\") # Modelin hiperparametre ayarları\n",
+    "print(f\"  RMSE: {rmse_lr}\")\n",
+    "print(f\"  R²: {r2_lr}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cef1a03-8a51-41a7-b968-af049f701279",
+   "metadata": {},
+   "source": [
+    "### 2. KNN Regresyon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b140bafc-e53a-4a7d-b439-eeb6034de218",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN Regresyon:\n",
+      "  En İyi Parametreler: {'n_neighbors': 21}\n",
+      "  RMSE: 3.21690226943782\n",
+      "  R²: 0.2678877147011167\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_model = KNeighborsRegressor() # KNN Regressor modelini tanımlıyoruz\n",
+    "\n",
+    "# KNN modelinin hiperparametre aralığını belirliyoruz. Burada 'n_neighbors' 1 ile 24 arasında değişecek.\n",
+    "param_grid_knn = {'n_neighbors': range(1, 25)}\n",
+    "\n",
+    "# GridSearchCV ile en iyi 'n_neighbors' parametresini bulmak için çapraz doğrulama (cv=5) ve 'neg_mean_squared_error' skorunu kullanıyoruz\n",
+    "grid_knn = GridSearchCV(knn_model, param_grid_knn, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Eğitim verisiyle modeli eğitiyoruz\n",
+    "grid_knn.fit(X_train, y_train)\n",
+    "\n",
+    "# En iyi parametreyi ve modeli seçiyoruz\n",
+    "best_knn_model = grid_knn.best_estimator_\n",
+    "\n",
+    "# Test verisi ile tahmin yapıyoruz\n",
+    "y_pred_knn = best_knn_model.predict(X_test)\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki RMSE (Root Mean Squared Error) hesaplanıyor\n",
+    "rmse_knn = np.sqrt(mean_squared_error(y_test, y_pred_knn))\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki R² (R-squared) skorunu hesaplıyoruz\n",
+    "r2_knn = r2_score(y_test, y_pred_knn)\n",
+    "\n",
+    "# Sonuçları 'results' listesine ekliyoruz\n",
+    "results.append({\"Model\": \"KNN Regresyon\", \"En İyi Parametreler\": grid_knn.best_params_, \"RMSE\": rmse_knn, \"R²\": r2_knn})\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"KNN Regresyon:\")\n",
+    "print(f\"  En İyi Parametreler: {grid_knn.best_params_}\") # GridSearchCV ile bulunan en iyi parametreler\n",
+    "print(f\"  RMSE: {rmse_knn}\")\n",
+    "print(f\"  R²: {r2_knn}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f11f769c-caa4-4766-a878-f12fc070444a",
+   "metadata": {},
+   "source": [
+    "### 3. Destek Vektör Regresyonu (SVR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "676e5166-46ef-4c93-8ae2-c563dda34a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SVR:\n",
+      "  En İyi Parametreler: {'C': 1, 'epsilon': 0.1, 'kernel': 'linear'}\n",
+      "  RMSE: 1.8110839841051625\n",
+      "  R²: 0.7679512995964752\n"
+     ]
+    }
+   ],
+   "source": [
+    "svr_model = SVR() # Destek Vektör Regresyonu (SVR) modelini tanımlıyoruz\n",
+    "\n",
+    "# SVR modelinin hiperparametre aralığını belirliyoruz:\n",
+    "# - 'kernel': 'linear' ve 'rbf' (Radial Basis Function) arasında seçim yapılacak\n",
+    "# - 'C': 0.1, 1 ve 10 değerleri denenir\n",
+    "# - 'epsilon': 0.1, 0.2, 0.5 değerleri denenir\n",
+    "param_grid_svr = {'kernel': ['linear', 'rbf'], 'C': [0.1, 1, 10], 'epsilon': [0.1, 0.2, 0.5]}\n",
+    "\n",
+    "# GridSearchCV ile en iyi parametreleri bulmak için çapraz doğrulama (cv=5) ve 'neg_mean_squared_error' skorunu kullanıyoruz\n",
+    "grid_svr = GridSearchCV(svr_model, param_grid_svr, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Eğitim verisiyle SVR modelini eğitiyoruz\n",
+    "grid_svr.fit(X_train, y_train)\n",
+    "\n",
+    "# En iyi model parametrelerini ve modelini seçiyoruz\n",
+    "best_svr_model = grid_svr.best_estimator_\n",
+    "\n",
+    "# Test verisi ile tahmin yapıyoruz\n",
+    "y_pred_svr = best_svr_model.predict(X_test)\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki RMSE (Root Mean Squared Error) hesaplanıyor\n",
+    "rmse_svr = np.sqrt(mean_squared_error(y_test, y_pred_svr))\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki R² (R-squared) skorunu hesaplıyoruz\n",
+    "r2_svr = r2_score(y_test, y_pred_svr)\n",
+    "\n",
+    "# Sonuçları 'results' listesine ekliyoruz\n",
+    "results.append({\"Model\": \"SVR\", \"En İyi Parametreler\": grid_svr.best_params_, \"RMSE\": rmse_svr, \"R²\": r2_svr})\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"\\nSVR:\")\n",
+    "print(f\"  En İyi Parametreler: {grid_svr.best_params_}\")  # GridSearchCV ile bulunan en iyi parametreler\n",
+    "print(f\"  RMSE: {rmse_svr}\")\n",
+    "print(f\"  R²: {r2_svr}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31062e65-5a72-420d-a1e0-2040516785fe",
+   "metadata": {},
+   "source": [
+    "### 4. Random Forest Regresyon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "2ca58fbf-e080-4737-85c0-02237d3b1ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Random Forest:\n",
+      "  En İyi Parametreler: {'max_depth': 18, 'n_estimators': 200}\n",
+      "  RMSE: 2.2129405189721134\n",
+      "  R²: 0.6535493008724635\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_model = RandomForestRegressor() # Random Forest Regressor modelini tanımlıyoruz\n",
+    "\n",
+    "# Random Forest modelinin hiperparametre aralığını belirliyoruz:\n",
+    "# - 'n_estimators': 50, 100 ve 200 değerleri denenir (modeldeki ağaç sayısı)\n",
+    "# - 'max_depth': 1 den 25 kadar olan değerler denenir (ağaçların maksimum derinliği)\n",
+    "param_grid_rf = {'n_estimators': [50, 100, 200], 'max_depth': list(range(1,25))}\n",
+    "\n",
+    "# GridSearchCV ile en iyi parametreleri bulmak için çapraz doğrulama (cv=5) ve 'neg_mean_squared_error' skorunu kullanıyoruz\n",
+    "grid_rf = GridSearchCV(rf_model, param_grid_rf, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Eğitim verisiyle Random Forest modelini eğitiyoruz\n",
+    "grid_rf.fit(X_train, y_train)\n",
+    "\n",
+    "# En iyi model parametrelerini ve modelini seçiyoruz\n",
+    "best_rf_model = grid_rf.best_estimator_\n",
+    "\n",
+    "# Test verisi ile tahmin yapıyoruz\n",
+    "y_pred_rf = best_rf_model.predict(X_test)\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki RMSE (Root Mean Squared Error) hesaplanıyor\n",
+    "rmse_rf = np.sqrt(mean_squared_error(y_test, y_pred_rf))\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki R² (R-squared) skorunu hesaplıyoruz\n",
+    "r2_rf = r2_score(y_test, y_pred_rf)\n",
+    "\n",
+    "# Sonuçları 'results' listesine ekliyoruz\n",
+    "results.append({\"Model\": \"Random Forest\", \"En İyi Parametreler\": grid_rf.best_params_, \"RMSE\": rmse_rf, \"R²\": r2_rf})\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"\\nRandom Forest:\")\n",
+    "print(f\"  En İyi Parametreler: {grid_rf.best_params_}\")  # GridSearchCV ile bulunan en iyi parametreler\n",
+    "print(f\"  RMSE: {rmse_rf}\")\n",
+    "print(f\"  R²: {r2_rf}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e97b139-cc3f-4eb6-96ea-0794aa3220fb",
+   "metadata": {},
+   "source": [
+    "### 5. Yapay Sinir Ağı (YSA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aa5351f8-9ee8-43c7-95fb-bb8000a156de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Yapay Sinir Ağı (YSA)):\n",
+      "  En İyi Parametreler: {'alpha': 0.0001, 'hidden_layer_sizes': (5,)}\n",
+      "  RMSE: 1.8182673151390545\n",
+      "  R²: 0.7661068922281753\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "# MLPRegressor modelini tanımlıyoruz\n",
+    "ann_model = MLPRegressor(max_iter=1000, random_state=42)\n",
+    "\n",
+    "# MLPRegressor için hiperparametre aralığını belirliyoruz:\n",
+    "# - 'hidden_layer_sizes': 5, 10 ve 20'lik katman sayıları denenir (her biri farklı sayıda nöron içeriyor)\n",
+    "# - 'alpha': 0.0001 ve 0.001 arasındaki değerler denenir (regularizasyon parametresi)\n",
+    "param_grid_ann = {'hidden_layer_sizes': [(5,), (10,), (20,)], 'alpha': [0.0001, 0.001]}\n",
+    "\n",
+    "# GridSearchCV ile en iyi parametreleri bulmak için çapraz doğrulama (cv=5) ve 'neg_mean_squared_error' skorunu kullanıyoruz\n",
+    "grid_ann = GridSearchCV(ann_model, param_grid_ann, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Eğitim verisiyle yapay sinir ağı modelini eğitiyoruz\n",
+    "grid_ann.fit(X_train, y_train)\n",
+    "\n",
+    "# En iyi model parametrelerini ve modelini seçiyoruz\n",
+    "best_ann_model = grid_ann.best_estimator_\n",
+    "\n",
+    "# Test verisi ile tahmin yapıyoruz\n",
+    "y_pred_ann = best_ann_model.predict(X_test)\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki RMSE (Root Mean Squared Error) hesaplanıyor\n",
+    "rmse_ann = np.sqrt(mean_squared_error(y_test, y_pred_ann))\n",
+    "\n",
+    "# Gerçek ve tahmin edilen değerler arasındaki R² (R-squared) skorunu hesaplıyoruz\n",
+    "r2_ann = r2_score(y_test, y_pred_ann)\n",
+    "\n",
+    "# Sonuçları 'results' listesine ekliyoruz\n",
+    "results.append({\"Model\": \"Yapay Sinir Ağı (YSA)\", \"En İyi Parametreler\": grid_ann.best_params_, \"RMSE\": rmse_ann, \"R²\": r2_ann})\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"\\nYapay Sinir Ağı (YSA)):\")\n",
+    "print(f\"  En İyi Parametreler: {grid_ann.best_params_}\")  # GridSearchCV ile bulunan en iyi parametreler\n",
+    "print(f\"  RMSE: {rmse_ann}\")\n",
+    "print(f\"  R²: {r2_ann}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b2c365fd-c2ff-4a39-a0f4-f79707d3de2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sonuç:\n",
+      "                Model                           En İyi Parametreler     RMSE       R²\n",
+      "   Doğrusal Regresyon                                       Default 1.815258 0.766880\n",
+      "        KNN Regresyon                           {'n_neighbors': 21} 3.216902 0.267888\n",
+      "                  SVR  {'C': 1, 'epsilon': 0.1, 'kernel': 'linear'} 1.811084 0.767951\n",
+      "        Random Forest        {'max_depth': 18, 'n_estimators': 200} 2.212941 0.653549\n",
+      "Yapay Sinir Ağı (YSA) {'alpha': 0.0001, 'hidden_layer_sizes': (5,)} 1.818267 0.766107\n",
+      "\n",
+      "En iyi model: SVR\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sonuçları tabloya dönüştürme\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"\\nSonuç:\")\n",
+    "print(results_df.to_string(index=False))\n",
+    "\n",
+    "# En iyi modeli seçme (en düşük RMSE'ye sahip olan model)\n",
+    "best_model_name = results_df.loc[results_df['RMSE'].idxmin(), 'Model']\n",
+    "print(f\"\\nEn iyi model: {best_model_name}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4379ee0d-abd8-4d0d-8ff9-69837b4568ff",
+   "id": "edad9e1f-9500-4252-836b-cea8b297ab97",
    "metadata": {},
    "outputs": [],
    "source": []
