--- a/VeriBilimineGirisProje.ipynb
+++ b/VeriBilimineGirisProje.ipynb
@@ -1710,7 +1710,7 @@
    "id": "edf53c40-93dc-4fb1-929c-fba5da5238f9",
    "metadata": {},
    "source": [
-    "## Model Eğitimi"
+    "### Model Eğitimi"
    ]
   },
   {
@@ -1936,9 +1936,9 @@
      "text": [
       "\n",
       "Random Forest:\n",
-      "  En İyi Parametreler: {'max_depth': 18, 'n_estimators': 200}\n",
-      "  RMSE: 2.2129405189721134\n",
-      "  R²: 0.6535493008724635\n"
+      "  En İyi Parametreler: {'max_depth': 14, 'n_estimators': 200}\n",
+      "  RMSE: 2.245241653976934\n",
+      "  R²: 0.6433615678757625\n"
      ]
     }
    ],
@@ -2059,7 +2059,7 @@
       "   Doğrusal Regresyon                                       Default 1.815258 0.766880\n",
       "        KNN Regresyon                           {'n_neighbors': 21} 3.216902 0.267888\n",
       "                  SVR  {'C': 1, 'epsilon': 0.1, 'kernel': 'linear'} 1.811084 0.767951\n",
-      "        Random Forest        {'max_depth': 18, 'n_estimators': 200} 2.212941 0.653549\n",
+      "        Random Forest        {'max_depth': 14, 'n_estimators': 200} 2.245242 0.643362\n",
       "Yapay Sinir Ağı (YSA) {'alpha': 0.0001, 'hidden_layer_sizes': (5,)} 1.818267 0.766107\n",
       "\n",
       "En iyi model: SVR\n"
@@ -2080,12 +2080,77 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edad9e1f-9500-4252-836b-cea8b297ab97",
+   "cell_type": "markdown",
+   "id": "821a0b83-28e8-4caf-9700-efe8c59616e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Boyutu Azaltılmış Veri Setinde Model Tahmini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "db2b574b-5fea-4de3-a28d-6f1668f8f85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performans Karşılaştırması:\n",
+      "Orijinal Veri Seti - RMSE: 1.8110839841051625, R²: 0.7679512995964752\n",
+      "PCA ile Azaltılmış Veri Seti - RMSE: 2.6328189316233965, R²: 0.5096073585807348\n",
+      "\n",
+      "Orijinal veri seti, PCA ile boyut azaltmadan daha iyi performans gösteriyor.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Veri setini yükleme\n",
+    "df = pd.read_csv('StudentPerformanceFactors_transformed.csv')\n",
+    "\n",
+    "# Bağımsız ve bağımlı değişkenleri ayırma\n",
+    "X = df.drop(columns=['Exam_Score'])\n",
+    "y = df['Exam_Score']\n",
+    "\n",
+    "# Eğitim ve test setlerini ayırma\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 1. Modeli orijinal veri seti ile eğitme (SVR)\n",
+    "svr_model = SVR(C=1, epsilon=0.1, kernel='linear')  # En iyi hiperparametrelerle SVR modeli\n",
+    "svr_model.fit(X_train, y_train)\n",
+    "y_pred_original = svr_model.predict(X_test)\n",
+    "rmse_original = np.sqrt(mean_squared_error(y_test, y_pred_original))\n",
+    "r2_original = r2_score(y_test, y_pred_original)\n",
+    "\n",
+    "# PCA ile boyut azaltma\n",
+    "pca = PCA(n_components=0.95)  # Veri setinin %95'ini açıklayacak bileşenleri seçiyoruz\n",
+    "X_train_pca = pca.fit_transform(X_train)\n",
+    "X_test_pca = pca.transform(X_test)\n",
+    "\n",
+    "# 2. Modeli PCA ile boyut azaltılmış veri seti ile eğitme\n",
+    "svr_model_pca = SVR(C=1, epsilon=0.1, kernel='linear')  # Aynı SVR modeli\n",
+    "svr_model_pca.fit(X_train_pca, y_train)\n",
+    "y_pred_pca = svr_model_pca.predict(X_test_pca)\n",
+    "rmse_pca = np.sqrt(mean_squared_error(y_test, y_pred_pca))\n",
+    "r2_pca = r2_score(y_test, y_pred_pca)\n",
+    "\n",
+    "# Sonuçları yazdırma\n",
+    "print(\"Performans Karşılaştırması:\")\n",
+    "print(f\"Orijinal Veri Seti - RMSE: {rmse_original}, R²: {r2_original}\")\n",
+    "print(f\"PCA ile Azaltılmış Veri Seti - RMSE: {rmse_pca}, R²: {r2_pca}\")\n",
+    "\n",
+    "# Performansı karşılaştırma\n",
+    "if rmse_pca < rmse_original:\n",
+    "    print(\"\\nPCA ile boyut azaltma performansı orijinal veri setinden daha iyi.\")\n",
+    "else:\n",
+    "    print(\"\\nOrijinal veri seti, PCA ile boyut azaltmadan daha iyi performans gösteriyor.\")\n"
+   ]
   }
  ],
  "metadata": {
